# websocket

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  default.nix  docker-compose.yml  flake.nix  format.sh
.github/workflows/: coverity.yml  test.yml
examples/echoback/: Makefile
examples/echoback/src/: main.c
native/: Makefile
shell/: check_ldd.sh  dump_kernel.sh  helgrind_run.sh  loop_test.sh  memcheck_run.sh  musl_build.sh  run.sh  static_analysis.sh
src/: main.c
src/arch/: accept.h  close.h  epoll.h  listen.h  memory.h  optimize_socket.h  recv.h  send.h  sigaction.h  write.h
src/arch/darwin/: accept.h  close.h  epoll.h  kqueue.c  listen.h  memory.h  optimize_socket.h  recv.h  send.h  sigaction.h  write.h
src/arch/linux/: epoll.h  errno.c  errno.h  fcntl.h  sigaction_def.h  sockaddr.h  sockoption.h
src/arch/linux/x86_64/: accept.h  asm.h  asm_syscall.S  close.h  dummy.c  epoll.h  listen.h  memory.h  optimize_socket.h  recv.h  restore_rt.S  send.h  sigaction.S  sigaction.h  write.h
src/crypt/: base64.h
src/crypto/: base64.h  sha1.c  sha1.h  sha1_def.h
src/http/: http.c  http.h
src/util/: allocator.h  log.c  log.h  signal.c  signal.h  string.h  types.h
src/websocket/: crypto.c  func.c  internal_log.c  log.c  parser.c  websocket.h  websocket_client.c  websocket_crypto.c  websocket_handshake.c  websocket_local.h  websocket_log.c  websocket_server.c
src/websocket/server/: func.c  handshake.c  init.c  loop.c
src/websocket/server/loop/: accept.h  accept_handle.h  loop.c  opcode_handle.h  receive.h  receive_handle.h
src/websocket/server/loop/accept/: accept_handle.h  epoll_accept.h
src/websocket/server/loop/receive/: epoll_receive.h  opcode_handle.h  receive_handle.h
src/websocket/socket/: accept.c  close.c  epoll.c  kqueue.c  listen.c  optimize_socket.h  recv.c  send.c
tests/: CMakeLists.txt  Makefile  string_test.c  websocket_parser_test.c
tests/crypto/: base64.cpp  sha1.cpp
tests/http/: request.cpp
